[package]
name = "blog"
version = "0.1.0"
authors = ["lkighy <1003027913@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
diesel = {version = "1.4.3", features = ["postgres", "chrono", "serde_json"]}
dotenv = "0.15.0"
chrono = {version = "0.4.10", features = ['serde']}
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]