[package]
name = "blog"
version = "0.1.0"
authors = ["lkighy <1003027913@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0" # web 框架
actix-rt = "1.0"
redis = "0.15.1"
mongodb = "0.9.2"
serde = "1.0.105" # json
serde_json = "1.0"
lazy_static = "1.4.0"
bson = "0.14.1" # 辅助 mongodb
actix-redis = "0.8.1"
actix-session = "0.3.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
rand = "0.7.3"
native-tls = "0.2.4"
base64 = "0.12.0"
